tests/e2e/not_allowed/protected.error
Error: syntax error in story at line 1, column 1

1|    protected = 1
      ^^^^^^^^^

E0030: `protected` is reserved for future use
